added clerk implementation

--- a/src/pages/sign-in.astro
+++ b/src/pages/sign-in.astro
@@ -17,6 +17,12 @@ import { SignIn } from '@clerk/astro/components';
                 routing="path"
                 signUpUrl="/sign-up"
                 afterSignInUrl="/"
+                appearance={{
+                    elements: {
+                        socialButtonsBlockButton: "display: none",
+                        dividerRow: "display: none"
+                    }
+                }}
             />
         </div>
     </div>
